fixed spacing

--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -1,3 +1,5 @@
+
+
 .Comments-title {
   @include font($subheader-font, 600, 0);
   background-color: $header-bg;
@@ -19,6 +21,7 @@
   height: 300px;
   padding: 24px 0 0 104px;
   margin-right: 104px;
+  margin-bottom: $size-increment*5;
   overflow-y: auto;
 }
 
